--- a/src/production/MQT.Startup/.env
+++ b/src/production/MQT.Startup/.env
@@ -1,8 +1,44 @@
 PORT=9002
-MONGODB_URI=
+MONGODB_URI=mongodb+srv://maplesense2025_db_user:fOvb6SDjUbe3EAqE@cluster0.mt69wbz.mongodb.net/
+DB_NAME=iot
+COLL_NAME=readings
+
+# Batch Processing Configuration
+BATCH_SIZE=1
+BATCH_WINDOW=500ms
+
+# Broker (local)
+BROKER_HOST=localhost
+BROKER_PORT=1883
+BROKER_TLS=false
+BROKER_USER=
+BROKER_PASS=
+BROKER_CA_FILE=
+
+# Broker (prod)
+BROKER_HOST=mqtt.example.com
+BROKER_PORT=8883
+BROKER_TLS=true
+BROKER_USER=piuser
+BROKER_PASS=supersecret
+BROKER_CA_FILE=/certs/ca.crt    # optional if using public CA
+
+# MQTT Subscription Configuration
+MQTT_TOPIC=sensors/#
+MQTT_CLIENT_ID=go-ingestor-1
+# MQTT_CLIENT_ID=go-ingestor-prod
+MQTT_SHARED_GROUP=ingestors
+
 REDIS_ADDR=
 REDIS_USERNAME=default
 REDIS_PASSWORD=
 REDIS_DB=0
 
+# Timezone
+TZ=Etc/UTC
+
+# Security (Additional production settings)
+# LOG_LEVEL=info
+# METRICS_ENABLED=true
+# TRACE_ENABLED=false
 
