Aadityaa2004:feat:MongoDB_to_Postgres

--- a/src/production/MQT.Startup/.env
+++ b/src/production/MQT.Startup/.env
@@ -7,6 +7,14 @@ COLL_NAME=readings
 BATCH_SIZE=1
 BATCH_WINDOW=500ms
 
+# PostgreSQL Configuration (replace MongoDB vars)
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USER=iot_user
+POSTGRES_PASSWORD=iot_password
+POSTGRES_DB=iot
+POSTGRES_SSLMODE=disable
+
 # Broker (local)
 BROKER_HOST=localhost
 BROKER_PORT=1883
