--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,21 +19,21 @@ services:
     networks:
       - mqtt-network
 
-  # MongoDB Database
-  mongo:
-    image: mongo:7
-    container_name: mongodb
+  # PostgreSQL Database
+  postgres:
+    image: postgres:15
+    container_name: postgresql
     ports:
-      - "27017:27017"
+      - "5432:5432"
     volumes:
-      - mongo-data:/data/db
+      - postgres-data:/var/lib/postgresql/data
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=password
-      - MONGO_INITDB_DATABASE=iot
+      - POSTGRES_USER=iot_user
+      - POSTGRES_PASSWORD=iot_password
+      - POSTGRES_DB=iot
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      test: ["CMD-SHELL", "pg_isready -U iot_user -d iot"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -48,7 +48,7 @@ services:
     depends_on:
       mosquitto:
         condition: service_healthy
-      mongo:
+      postgres:
         condition: service_healthy
     ports:
       - "9002:9002"        # HTTP health endpoint
@@ -56,10 +56,13 @@ services:
       # HTTP Server
       - PORT=9002
       
-      # MongoDB Configuration
-      - MONGODB_URI=mongodb+srv://maplesense2025_db_user:fOvb6SDjUbe3EAqE@cluster0.mt69wbz.mongodb.net/iot?retryWrites=true&w=majority&tls=true
-      - DB_NAME=iot
-      - COLL_NAME=readings
+      # PostgreSQL Configuration
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_USER=iot_user
+      - POSTGRES_PASSWORD=iot_password
+      - POSTGRES_DB=iot
+      - POSTGRES_SSLMODE=disable
       
       # MQTT Broker Configuration (Dev)
       - BROKER_HOST=mosquitto
@@ -107,12 +110,30 @@ services:
     profiles:
       - dev
 
+  # PostgreSQL Admin (pgAdmin) - Web-based database management
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pgadmin
+    ports:
+      - "5050:80"
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@example.com
+      - PGADMIN_DEFAULT_PASSWORD=admin
+      - PGADMIN_CONFIG_SERVER_MODE=False
+    depends_on:
+      - postgres
+    restart: unless-stopped
+    networks:
+      - mqtt-network
+    profiles:
+      - dev
+
 volumes:
   mosq-data:
     driver: local
   mosq-logs:
     driver: local
-  mongo-data:
+  postgres-data:
     driver: local
 
 networks:
